# Ucheba

./: 7777.txt  README.md  main.cpp  text.txt
hw 10/: main.cpp
hw 11/: main.cpp
hw 5/: main.cpp
hw 8/: main81.cpp
hw 9/: functions.cpp  functions.hpp  main.cpp
sem2hw1/: CMakeLists.txt  functions.cpp  functions.hpp  main.cpp
sem2hw2/: CMakeLists.txt  main.cpp
sem2hw3/: CMakeLists.txt  main.cpp  pseudo_string.cpp  pseudo_string.hpp
sem2hw4/: CMakeLists.txt  cycle.hpp  main.cpp
sem2hw4/gobj/: circle.hpp  line.hpp  rectangle.hpp  triangle.hpp
sem2hw5/: CMakeLists.txt  circle.hpp  cycle.hpp  main.cpp
sem2hw68/: CMakeLists.txt  black_hole.hpp  cycle.hpp  enemys.hpp  main.cpp  particles.hpp  spaceship.hpp
